[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/UserSettings.gd" type="Script" id=1]
[ext_resource path="res://scenes/AvatarPreview.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/Options/Visual_Selector.gd" type="Script" id=3]
[ext_resource path="res://addons/HuePicker/HuePicker.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends HBoxContainer

signal gender_changed(IDX)

func _ready():
	if Options.gender == 1:
		get_node(\"Male\").pressed = true
	else:
		get_node(\"Female\").pressed = true
		

func _on_Male_toggled(button_pressed):
	if button_pressed:
		emit_signal(\"gender_changed\",1)
		get_node(\"Female\").pressed = false
		get_node(\"../../VBoxContainer/Gender\").select(1)
	else:
		get_node(\"Female\").pressed = true
		emit_signal(\"gender_changed\",0)
		get_node(\"../../VBoxContainer/Gender\").select(0)
		

func _on_Female_toggled(button_pressed):
	if button_pressed:
		emit_signal(\"gender_changed\",0)
		get_node(\"Male\").pressed = false
		get_node(\"../../VBoxContainer/Gender\").select(0)
	else:
		get_node(\"Male\").pressed = true
		emit_signal(\"gender_changed\",1)
		get_node(\"../../VBoxContainer/Gender\").select(1)
"

[node name="UserSettings" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 700.0
alignment = 1

[node name="Spacer2" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 500.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="UsernameTextEdit2" type="LineEdit" parent="VBoxContainer2"]
margin_top = 14.0
margin_right = 500.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
text = "Player1"
align = 1
context_menu_enabled = false
caret_blink = true

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer2"]
margin_top = 92.0
margin_right = 500.0
margin_bottom = 592.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Viewport" type="Viewport" parent="VBoxContainer2/ViewportContainer"]
size = Vector2( 500, 500 )
own_world = true
transparent_bg = true
handle_input_locally = false
msaa = 3
render_target_update_mode = 3

[node name="AvatarPreview" parent="VBoxContainer2/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="Female" type="Control" parent="VBoxContainer2/ViewportContainer"]
margin_bottom = 700.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Pants2" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 264.096
margin_top = 219.61
margin_right = 294.096
margin_bottom = 325.61
rect_rotation = 0.842541
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Pants" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 208.734
margin_top = 218.757
margin_right = 238.734
margin_bottom = 324.757
rect_rotation = -2.18987
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Shirt" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 221.0
margin_top = 98.0
margin_right = 284.0
margin_bottom = 184.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Pants3" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 221.0
margin_top = 180.0
margin_right = 284.0
margin_bottom = 228.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin4" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 199.0
margin_top = 95.0
margin_right = 223.0
margin_bottom = 251.0
rect_rotation = 5.68706
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin5" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 287.0
margin_top = 103.0
margin_right = 318.0
margin_bottom = 211.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Hair" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 225.0
margin_top = 34.0
margin_right = 275.0
margin_bottom = 85.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin3" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 235.0
margin_top = 42.0
margin_right = 266.0
margin_bottom = 82.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 218.243
margin_top = 327.0
margin_right = 241.243
margin_bottom = 424.0
rect_rotation = 2.15079
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin6" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 215.0
margin_top = 410.0
margin_right = 247.0
margin_bottom = 444.0
rect_rotation = 2.15079
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Shoes" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 267.051
margin_top = 329.463
margin_right = 294.051
margin_bottom = 423.463
rect_rotation = -6.56456
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Shoes2" type="Button" parent="VBoxContainer2/ViewportContainer/Female"]
margin_left = 277.0
margin_top = 419.0
margin_right = 314.0
margin_bottom = 457.0
rect_rotation = -6.56456
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Male" type="Control" parent="VBoxContainer2/ViewportContainer"]
margin_bottom = 700.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Shirt" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 218.0
margin_top = 96.0
margin_right = 284.0
margin_bottom = 188.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Pants3" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 217.119
margin_top = 189.101
margin_right = 289.119
margin_bottom = 242.101
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Pants2" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 259.0
margin_top = 232.0
margin_right = 291.0
margin_bottom = 339.0
rect_rotation = -3.15087
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Pants" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 216.119
margin_top = 231.807
margin_right = 247.119
margin_bottom = 327.807
rect_rotation = 2.99568
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin4" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 199.0
margin_top = 106.0
margin_right = 219.0
margin_bottom = 183.0
rect_rotation = 3.09336
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin6" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 192.826
margin_top = 179.587
margin_right = 215.826
margin_bottom = 264.587
rect_rotation = 12.0404
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin5" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 282.0
margin_top = 106.0
margin_right = 319.0
margin_bottom = 220.0
rect_rotation = -2.75996
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Hair" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 228.0
margin_top = 29.0
margin_right = 273.0
margin_bottom = 89.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin3" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 234.0
margin_top = 36.0
margin_right = 267.0
margin_bottom = 82.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 217.0
margin_top = 327.0
margin_right = 244.0
margin_bottom = 410.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin2" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 273.0
margin_top = 332.0
margin_right = 297.0
margin_bottom = 420.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin7" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 282.0
margin_top = 416.0
margin_right = 314.0
margin_bottom = 453.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skin8" type="Button" parent="VBoxContainer2/ViewportContainer/Male"]
margin_left = 214.0
margin_top = 411.0
margin_right = 243.0
margin_bottom = 445.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="GenderVisual" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 646.0
margin_right = 500.0
margin_bottom = 686.0
alignment = 1
script = SubResource( 1 )

[node name="Male" type="Button" parent="VBoxContainer2/GenderVisual"]
margin_left = 158.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
toggle_mode = true
text = "Male"

[node name="Female" type="Button" parent="VBoxContainer2/GenderVisual"]
margin_left = 252.0
margin_right = 342.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
toggle_mode = true
text = "Female"

[node name="Spacer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 690.0
margin_right = 500.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 10 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 504.0
margin_right = 508.0
margin_bottom = 700.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="HuePicker" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 128.0
margin_top = 79.0
margin_right = 384.0
margin_bottom = 335.0
rect_min_size = Vector2( 256, 256 )
rect_clip_content = true
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="Spacer3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 350.0
margin_right = 512.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 30 )

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 395.0
margin_right = 512.0
margin_bottom = 409.0
text = "Use an account to sync your settings"
align = 1

[node name="UsernameContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 424.0
margin_right = 512.0
margin_bottom = 448.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="UsernameLabel" type="Label" parent="VBoxContainer/UsernameContainer"]
margin_top = 5.0
margin_right = 254.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Username:"
align = 1
valign = 3

[node name="UsernameTextEdit" type="LineEdit" parent="VBoxContainer/UsernameContainer"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
text = "Player1"
align = 1
context_menu_enabled = false
caret_blink = true
caret_position = 7

[node name="GenderLabel" type="Label" parent="VBoxContainer"]
margin_top = 463.0
margin_right = 512.0
margin_bottom = 477.0
text = "Gender:"
align = 1

[node name="Gender" type="OptionButton" parent="VBoxContainer"]
margin_top = 492.0
margin_right = 512.0
margin_bottom = 512.0
text = "Female"
items = [ "Female", null, false, 0, null, "Male", null, false, 1, null ]
selected = 0

[node name="ColorSlotLabel" type="Label" parent="VBoxContainer"]
margin_top = 527.0
margin_right = 512.0
margin_bottom = 541.0
text = "Color Slot:"
align = 1

[node name="SlotOption" type="OptionButton" parent="VBoxContainer"]
margin_top = 556.0
margin_right = 512.0
margin_bottom = 576.0
text = "Pants"
items = [ "Pants", null, false, 0, null, "Shirt", null, false, 1, null, "Skin", null, false, 2, null, "Hair", null, false, 3, null, "Shoes", null, false, 4, null ]
selected = 0

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_left = 231.0
margin_top = 591.0
margin_right = 281.0
margin_bottom = 621.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 4
text = "Save"
[connection signal="text_changed" from="VBoxContainer2/UsernameTextEdit2" to="." method="_on_UsernameTextEdit2_text_changed"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Pants2" to="VBoxContainer2/ViewportContainer/Female" method="_on_pants_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Pants" to="VBoxContainer2/ViewportContainer/Female" method="_on_pants_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Shirt" to="VBoxContainer2/ViewportContainer/Female" method="_on_shirt_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Pants3" to="VBoxContainer2/ViewportContainer/Female" method="_on_pants_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Skin4" to="VBoxContainer2/ViewportContainer/Female" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Skin5" to="VBoxContainer2/ViewportContainer/Female" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Hair" to="VBoxContainer2/ViewportContainer/Female" method="_on_hair_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Skin3" to="VBoxContainer2/ViewportContainer/Female" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Skin" to="VBoxContainer2/ViewportContainer/Female" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Skin6" to="VBoxContainer2/ViewportContainer/Female" method="_on_shoes_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Shoes" to="VBoxContainer2/ViewportContainer/Female" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Female/Shoes2" to="VBoxContainer2/ViewportContainer/Female" method="_on_shoes_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Shirt" to="VBoxContainer2/ViewportContainer/Male" method="_on_shirt_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Pants3" to="VBoxContainer2/ViewportContainer/Male" method="_on_pants_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Pants2" to="VBoxContainer2/ViewportContainer/Male" method="_on_pants_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Pants" to="VBoxContainer2/ViewportContainer/Male" method="_on_pants_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin4" to="VBoxContainer2/ViewportContainer/Male" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin6" to="VBoxContainer2/ViewportContainer/Male" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin5" to="VBoxContainer2/ViewportContainer/Male" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Hair" to="VBoxContainer2/ViewportContainer/Male" method="_on_hair_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin3" to="VBoxContainer2/ViewportContainer/Male" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin" to="VBoxContainer2/ViewportContainer/Male" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin2" to="VBoxContainer2/ViewportContainer/Male" method="_on_skin_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin7" to="VBoxContainer2/ViewportContainer/Male" method="_on_shoes_selected"]
[connection signal="pressed" from="VBoxContainer2/ViewportContainer/Male/Skin8" to="VBoxContainer2/ViewportContainer/Male" method="_on_shoes_selected"]
[connection signal="gender_changed" from="VBoxContainer2/GenderVisual" to="." method="_on_Gender_item_selected"]
[connection signal="toggled" from="VBoxContainer2/GenderVisual/Male" to="VBoxContainer2/GenderVisual" method="_on_Male_toggled"]
[connection signal="toggled" from="VBoxContainer2/GenderVisual/Female" to="VBoxContainer2/GenderVisual" method="_on_Female_toggled"]
[connection signal="Hue_Selected" from="VBoxContainer/HuePicker" to="." method="_on_HuePicker_Hue_Selected"]
[connection signal="text_changed" from="VBoxContainer/UsernameContainer/UsernameTextEdit" to="." method="_on_UsernameTextEdit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/Gender" to="." method="_on_Gender_item_selected"]
[connection signal="item_selected" from="VBoxContainer/SlotOption" to="." method="_on_SlotOption_item_selected"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
